Reposition floating cards to fix overlapping in hero section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -429,26 +429,26 @@ img {
 }
 
 .card-1 {
-    top: 20%;
-    left: 0;
+    top: 25%;
+    left: 20%;
     animation-delay: 0s;
 }
 
 .card-2 {
-    top: 0;
-    left: 15%;
+    top: 5%;
+    left: 0;
     animation-delay: 1s;
 }
 
 .card-3 {
-    top: 68%;
-    left: 0;
+    top: 75%;
+    left: 10%;
     animation-delay: 2s;
 }
 
 .card-4 {
-    top: 40%;
-    left: 12%;
+    top: 50%;
+    left: 0;
     animation-delay: 1.5s;
 }
 
